修改目录结构

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -47,15 +47,15 @@
 //   --codeColor: #fff
 //   codeThemeDark()
 
-// // 阅读模式
-// .theme-mode-read
-//   --bodyBg: rgb(240,240,208)
-//   --mainBg: rgba(245,245,213,1)
-//   --sidebarBg: rgba(245,245,213,.8)
-//   --blurBg: rgba(245,245,213,.9)
-//   --textColor: #004050
-//   --textLightenColor: #0085AD
-//   --borderColor: rgba(0,0,0,.15)
-//   --codeBg: #282c34
-//   --codeColor: #fff
-//   codeThemeDark()
+ // 阅读模式
+ .theme-mode-read
+   --bodyBg: rgb(240,240,208)
+   --mainBg: rgba(245,245,213,1)
+   --sidebarBg: rgba(245,245,213,.8)
+   --blurBg: rgba(245,245,213,.9)
+   --textColor: #004050
+   --textLightenColor: #0085AD
+   --borderColor: rgba(0,0,0,.15)
+   --codeBg: #282c34
+   --codeColor: #fff
+   codeThemeDark()
